language/move-lang/tests/move_check/translated_ir_tests/commands/continue_outside_loop.move
fun main() {
    continue
}

// check: continue outside loop
